--- a/About.css
+++ b/About.css
@@ -1,60 +1,107 @@
-.desc{
-    font-size: 23px;
-    text-indent: 10px;
-    text-align: justify;
-}
-.py{
-    color: green;
-}
-.jv{
-    color: chocolate;
-}
-.c{
-    color: blue;
-}
-.cc{
-    color: rgb(62, 19, 214);
-}
-.mar{
-    margin-left: 28px;
-    background-image: url("https://images.unsplash.com/photo-1601662528567-526cd06f6582?w=1200&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cHJvZmVzc2lvbmFsJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D")
-}
-
-.nav a{
-   margin: 0px 5px 0px 5px;
-    text-decoration: dashed;
-        color: black;
-        padding: 15px;
-        font-size: 20px;
-        border-top: 4px solid;
-    }
-.nav a:hover{
-    color: rgb(15, 43, 255);
-}
-.about{
-    text-align: center;
-    padding: 20px;
-    color: black;
+body {
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    background-color: #f7f7f7;
+    color: #333;
+  }
+  
+  .header {
+    background-color: #1e1e2f;
+    color: white;
+    padding: 1rem 0;
+  }
+  
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 1rem;
+  }
+  
+  .header h1 {
+    margin: 0;
+    font-size: 2rem;
+  }
+  
+  .highlight {
+    color: red;
+  }
+  
+  .nav a {
+    color: white;
+    margin-left: 20px;
+    text-decoration: none;
+    font-weight: 500;
+  }
+  
+  .nav a:hover {
+    color: #00bfff;
+  }
+  
+  .intro {
     display: flex;
     align-items: center;
-}
-.photo{
-
-    float: right;
-    margin-right: 10cap;
-    border-radius: 150px;
-}
-.name{
-    margin-right: 730px;
-    font-style: italic;
-    color: rgb(89, 84, 84);
-}
-.colour{
-    color: red;
-}
-.indent{
-    text-align: justify;
-    margin: 10px;
-   text-indent:35px;
-   font-size: 23px;
-}
+    gap: 2rem;
+    padding: 2rem 1rem;
+    max-width: 1000px;
+    margin: auto;
+    background-color: #fff;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  .profile-pic {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .section {
+    padding: 2rem 1rem;
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  .language-table {
+    width: 100%;
+    max-width: 400px;
+    margin-top: 1rem;
+    border-collapse: collapse;
+  }
+  
+  .language-table td {
+    padding: 0.8rem;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .lang {
+    font-weight: bold;
+  }
+  
+  .lang.java { color: #007396; }     /* Java blue */
+  .lang.python { color: #3572A5; }   /* Python blue */
+  .lang.c { color: #555; }
+  .lang.cpp { color: #f34b7d; }      /* C++ pink */
+  
+  .footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #1e1e2f;
+    color: white;
+    margin-top: 2rem;
+  }
+  
+  @media (max-width: 768px) {
+    .intro {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .profile-pic {
+      width: 150px;
+      height: 150px;
+    }
+  }
+  
